5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1692_1099.log
== SUBMITION (2019-04-30 18:02:48) 
-- CODE:
a=float(input("digite o numero:"))
b=float(input("digite o numero:"))
c=float(input("digite o numero:"))
if(a<b+c and b<a+c and c<b+a):
	print("a,b,c")
	if(a==b and b==c):
		print("equilatero")
	elif:(a==b or b==c or a==c):
			print("isosceles")
	else:
		print("escaleno")
else:
	print("invalido")


-- EXECUTION TIME:
0.174722
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 8
    elif:(a==b or b==c or a==c):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:02:51) 
-- CODE:
a=float(input("digite o numero:"))
b=float(input("digite o numero:"))
c=float(input("digite o numero:"))
if(a<b+c and b<a+c and c<b+a):
	print("a,b,c")
	if(a==b and b==c):
		print("equilatero")
	elif:(a==b or b==c or a==c):
			print("isosceles")
	else:
		print("escaleno")
else:
	print("invalido")


-- ERROR:
File "XXXX", line 8
    elif:(a==b or b==c or a==c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:03:38) 
-- CODE:
a=float(input("digite o numero:"))
b=float(input("digite o numero:"))
c=float(input("digite o numero:"))
if(a<b+c and b<a+c and c<b+a):
	print("a,b,c")
	if(a==b and b==c):
		print("equilatero")
	elif(a==b or b==c or a==c):
			print("isosceles")
	else:
		print("escaleno")
else:
	print("invalido")


-- EXECUTION TIME:
0.155341
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
a,b,c
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
a,b,c
escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:03:40) 
-- CODE:
a=float(input("digite o numero:"))
b=float(input("digite o numero:"))
c=float(input("digite o numero:"))
if(a<b+c and b<a+c and c<b+a):
	print("a,b,c")
	if(a==b and b==c):
		print("equilatero")
	elif(a==b or b==c or a==c):
			print("isosceles")
	else:
		print("escaleno")
else:
	print("invalido")


-- OUTPUT:
a,b,c
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:12:57) 
-- CODE:
a=float(input("digite o numero:"))
b=float(input("digite o numero:"))
c=float(input("digite o numero:"))
if(a>=b+c) or (b>=a+c) or (c>=b+a) or (a<0) or (b<0) or (c<0):
	mensagem="invalido"
elif(a==b and b==c):
	mensagem="equilatero"
elif(a==b or b==c or a==c):
	mensagem="isosceles"
else:
	mensagem="escaleno"
	
	
print("Entradas:", a ,"," , b, "," , c)
print("Tipo de triangulo:", mensagem)


-- EXECUTION TIME:
0.129584
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
